--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -6,6 +6,7 @@
   .visible {
     visibility: visible;
   }
+
   .invisible {
     visibility: hidden;
   }
@@ -75,9 +76,11 @@
 input[type="search"]::-ms-clear {
   @apply hidden h-0 w-0;
 }
+
 input[type="search"]::-ms-reveal {
   @apply hidden h-0 w-0;
 }
+
 /* clears the ‘X’ from Chrome */
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
@@ -110,7 +113,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 /* Dropdowns */
-.dropdown--is-open + .js-dropdown {
+.dropdown--is-open+.js-dropdown {
   visibility: visible;
   opacity: 1;
   transform: translateY(0);
@@ -120,14 +123,14 @@ input[type="search"]::-webkit-search-results-decoration {
   @apply block;
 }
 
-.dropdown-toggle > i,
-.dropdown-toggle > button {
+.dropdown-toggle>i,
+.dropdown-toggle>button {
   @apply transition-transform;
 }
 
-.dropdown-toggle.show > i,
-.dropdown-toggle.show > svg,
-.dropdown-toggle.show > button {
+.dropdown-toggle.show>i,
+.dropdown-toggle.show>svg,
+.dropdown-toggle.show>button {
   @apply rotate-180;
 }
 
@@ -170,9 +173,23 @@ input[type="search"]::-webkit-search-results-decoration {
   @apply bg-accent;
 }
 
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/* Animation class */
+.animate-spin {
+  animation: spin 1s linear infinite; /* Apply the spin animation */
+}
+
 /* Lazyload Preloader */
 .swiper-lazy-preloader {
-  @apply absolute left-1/2 top-1/2 z-10 -ml-[21px] -mt-[21px] box-border h-[42px] w-[42px] origin-center animate-spin rounded-full border-4 border-accent border-t-transparent;
+  @apply absolute left-1/2 top-1/2 z-10 -ml-[21px] -mt-[21px] box-border h-[42px] w-[42px] origin-center animate-spin-slow rounded-full border-4 border-accent border-t-transparent;
 }
 
 /* Full slider with thumbs */
@@ -195,7 +212,7 @@ input[type="search"]::-webkit-search-results-decoration {
   @apply bg-jacarta-100 dark:bg-jacarta-600;
 }
 
-.swiper-horizontal > .swiper-scrollbar,
+.swiper-horizontal>.swiper-scrollbar,
 .swiper-scrollbar.swiper-scrollbar-horizontal {
   @apply z-50 mt-16 h-0.5 w-full;
 }
@@ -209,20 +226,19 @@ input[type="search"]::-webkit-search-results-decoration {
   @apply bg-jacarta-700;
 }
 
-.tippy-box[data-theme~="xhibiter"][data-placement^="top"]
-  > .tippy-arrow::before {
+.tippy-box[data-theme~="xhibiter"][data-placement^="top"]>.tippy-arrow::before {
   @apply border-t-jacarta-700;
 }
-.tippy-box[data-theme~="xhibiter"][data-placement^="bottom"]
-  > .tippy-arrow::before {
+
+.tippy-box[data-theme~="xhibiter"][data-placement^="bottom"]>.tippy-arrow::before {
   @apply border-b-jacarta-700;
 }
-.tippy-box[data-theme~="xhibiter"][data-placement^="left"]
-  > .tippy-arrow::before {
+
+.tippy-box[data-theme~="xhibiter"][data-placement^="left"]>.tippy-arrow::before {
   @apply border-l-jacarta-700;
 }
-.tippy-box[data-theme~="xhibiter"][data-placement^="right"]
-  > .tippy-arrow::before {
+
+.tippy-box[data-theme~="xhibiter"][data-placement^="right"]>.tippy-arrow::before {
   @apply border-r-jacarta-700;
 }
 
@@ -246,7 +262,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .nav-link--style-3 {
-  @apply after:absolute after:-z-10 after:!h-2.5 after:w-0 after:transition-width;
+  @apply after:absolute after:-z-10 after: !h-2.5 after:w-0 after:transition-width;
 }
 
 .nav-link--style-3.active {
@@ -269,11 +285,11 @@ input[type="search"]::-webkit-search-results-decoration {
   @apply block;
 }
 
-.tab-content > .tab-pane {
+.tab-content>.tab-pane {
   @apply hidden;
 }
 
-.tab-content > .active {
+.tab-content>.active {
   @apply block;
 }
 
@@ -355,7 +371,7 @@ input[type="search"]::-webkit-search-results-decoration {
   @apply relative before:block before:pt-[var(--bs-aspect-ratio)];
 }
 
-.ratio > * {
+.ratio>* {
   @apply absolute top-0 left-0 h-full w-full;
 }
 
@@ -391,25 +407,25 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 /* Article */
-.article-content > *:not(.article-content-wide) {
+.article-content>*:not(.article-content-wide) {
   @apply mx-auto mt-6 max-w-[48.125rem];
 }
 
-.article-content > h1,
-.article-content > h2,
-.article-content > h3,
-.article-content > h4,
-.article-content > h5,
-.article-content > h6 {
+.article-content>h1,
+.article-content>h2,
+.article-content>h3,
+.article-content>h4,
+.article-content>h5,
+.article-content>h6 {
   @apply !mt-12 mb-4 font-display text-jacarta-700 dark:text-white;
 }
 
-.article-content > p {
+.article-content>p {
   @apply dark:text-jacarta-300;
 }
 
-.article-content > ul,
-.article-content > ol {
+.article-content>ul,
+.article-content>ol {
   list-style: initial;
   @apply space-y-4 pl-4 dark:text-jacarta-300;
 }
@@ -426,14 +442,12 @@ input[type="search"]::-webkit-search-results-decoration {
 /* Gradient animation */
 .animate-gradient {
   -webkit-text-fill-color: transparent;
-  background: linear-gradient(
-    270deg,
-    rgb(255, 115, 86) 0%,
-    rgb(255, 89, 226) 25.52%,
-    rgb(82, 221, 246) 50%,
-    rgb(234, 223, 78) 76.04%,
-    rgb(255, 115, 86) 100%
-  );
+  background: linear-gradient(270deg,
+      rgb(255, 115, 86) 0%,
+      rgb(255, 89, 226) 25.52%,
+      rgb(82, 221, 246) 50%,
+      rgb(234, 223, 78) 76.04%,
+      rgb(255, 115, 86) 100%);
   background-size: 200% auto;
   -webkit-background-clip: text;
   background-clip: text;
@@ -442,19 +456,18 @@ input[type="search"]::-webkit-search-results-decoration {
 .animate-gradient--no-text-fill {
   -webkit-text-fill-color: initial;
 }
+
 /* .swiper-slide-fully-visible {
   display: none;
 } */
 
 .animate-gradientDiagonal {
-  background: linear-gradient(
-    270deg,
-    rgb(65, 88, 208) 0%,
-    rgb(200, 80, 192) 25.52%,
-    rgb(255, 204, 112) 50%,
-    rgb(255, 112, 112) 76.04%,
-    rgb(65, 88, 208) 100%
-  );
+  background: linear-gradient(270deg,
+      rgb(65, 88, 208) 0%,
+      rgb(200, 80, 192) 25.52%,
+      rgb(255, 204, 112) 50%,
+      rgb(255, 112, 112) 76.04%,
+      rgb(65, 88, 208) 100%);
   background-size: 200% auto;
 }
 
