--- a/src/output.css
+++ b/src/output.css
@@ -2151,6 +2151,10 @@ select {
   animation: spin 1s linear infinite;
 }
 
+.animate-spin-slow-2 {
+  animation: spin 10s linear infinite;
+}
+
 .cursor-default {
   cursor: default;
 }
