--- a/src/output.css
+++ b/src/output.css
@@ -3747,7 +3747,7 @@ select {
 
 .before\:bg-\[url\(\'\.\.\/img\/heart-fill\.svg\'\)\]::before {
   content: var(--tw-content);
-  background-image: url('../img/heart-fill.svg');
+  background-image: url('./assets/img/heart-fill.svg');
 }
 
 .before\:bg-cover::before {
